crates/obj-rs/tests/derive_compile_fail/duplicate_struct_attr.stderr
error: `version` declared twice
 --> tests/derive_compile_fail/duplicate_struct_attr.rs:5:7
  |
5 | #[obj(version = 3)]
  |       ^^^^^^^
