crates/obj-rs/tests/derive_compile_fail/duplicate_struct_attr.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
#[obj(version = 2)]
#[obj(version = 3)]
struct DuplicateVersion {
    x: u32,
}

fn main() {}
